spacing-issues

--- a/output.css
+++ b/output.css
@@ -705,6 +705,11 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -727,10 +732,6 @@ video {
 
 .mr-7{
   margin-right: 1.75rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
 }
 
 .mt-16{
@@ -789,12 +790,12 @@ video {
   height: 2.5rem;
 }
 
-.h-11{
-  height: 2.75rem;
-}
-
 .h-16{
   height: 4rem;
+}
+
+.h-48{
+  height: 12rem;
 }
 
 .h-5{
@@ -803,6 +804,10 @@ video {
 
 .h-6{
   height: 1.5rem;
+}
+
+.h-7{
+  height: 1.75rem;
 }
 
 .h-8{
@@ -814,28 +819,12 @@ video {
   height: fit-content;
 }
 
-.h-48{
-  height: 12rem;
-}
-
-.h-7{
-  height: 1.75rem;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
 .max-h-\[100vh\]{
   max-height: 100vh;
 }
 
 .w-10{
   width: 2.5rem;
-}
-
-.w-11{
-  width: 2.75rem;
 }
 
 .w-16{
@@ -854,6 +843,10 @@ video {
   width: 1.5rem;
 }
 
+.w-7{
+  width: 1.75rem;
+}
+
 .w-8{
   width: 2rem;
 }
@@ -868,10 +861,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-7{
-  width: 1.75rem;
 }
 
 .min-w-\[250px\]{
@@ -896,10 +885,6 @@ video {
 
 .basis-1\/4{
   flex-basis: 25%;
-}
-
-.basis-96{
-  flex-basis: 24rem;
 }
 
 @keyframes pulse{
@@ -934,6 +919,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -1030,6 +1019,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-visible{
+  overflow: visible;
+}
+
 .overflow-x-auto{
   overflow-x: auto;
 }
@@ -1083,12 +1076,12 @@ video {
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-0{
   border-width: 0px;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-t{
@@ -1137,11 +1130,6 @@ video {
 .bg-cyan-200{
   --tw-bg-opacity: 1;
   background-color: rgb(165 243 252 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-lime-100{
@@ -1341,34 +1329,14 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-36{
-  padding-top: 9rem;
-  padding-bottom: 9rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .py-28{
@@ -1376,9 +1344,28 @@ video {
   padding-bottom: 7rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .pb-28{
@@ -1403,10 +1390,6 @@ video {
 
 .pt-56{
   padding-top: 14rem;
-}
-
-.pb-10{
-  padding-bottom: 2.5rem;
 }
 
 .text-left{
@@ -1503,11 +1486,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1596,14 +1574,14 @@ video {
   }
 }
 
-.hover\:bg-gray-50:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-blue-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-50:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gradient-to-r:hover{
@@ -1656,16 +1634,6 @@ video {
 .group:hover .group-hover\:text-green-300{
   --tw-text-opacity: 1;
   color: rgb(134 239 172 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-indigo-600{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:delay-200{
@@ -1733,6 +1701,18 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:mt-14{
+    margin-top: 3.5rem;
+  }
+
+  .md\:mt-20{
+    margin-top: 5rem;
+  }
+
+  .md\:mt-24{
+    margin-top: 6rem;
+  }
+
   .md\:block{
     display: block;
   }
@@ -1743,10 +1723,6 @@ video {
 
   .md\:w-3\/5{
     width: 60%;
-  }
-
-  .md\:w-4\/5{
-    width: 80%;
   }
 
   .md\:min-w-\[450px\]{
@@ -1778,6 +1754,11 @@ video {
     padding-right: 4rem;
   }
 
+  .md\:px-40{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
   .md\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1786,11 +1767,6 @@ video {
   .md\:px-9{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
-  }
-
-  .md\:px-40{
-    padding-left: 10rem;
-    padding-right: 10rem;
   }
 
   .md\:text-left{
@@ -1802,6 +1778,11 @@ video {
     line-height: 2rem;
   }
 
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
@@ -1810,11 +1791,6 @@ video {
   .md\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .md\:font-semibold{
